help page added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="">Information</a> </li>
                 <li><a href="./home.html">Education</a> </li>
                 <li><a href="">Communication Channels</a></li>
-                <li><a href="">help ?</a> </li>
+                <li><a href="help.html">help ?</a> </li>
                 <li><a href=""><a href="">sign-in</a></a> </li>
 
             </ul>
