backend ,login page ,information page and communication page added also other files modified

--- a/earthquake.html
+++ b/earthquake.html
@@ -23,30 +23,34 @@
         <h2>Earthquake Preparedness</h2>
         <h3>Before an Earthquake</h3>
         <ul>
-            <li>Secure heavy items like furniture and appliances.</li>
-            <li>Practice "Drop, Cover, and Hold On."</li>
-            <li>Have an emergency kit ready.</li>
-            <li>Identify safe places in each room.</li>
+            <p>Taking precautions before an earthquake can significantly reduce the risk of injury and damage. Start by securing your space: identify potential hazards in your home and anchor heavy furniture, cupboards, and appliances to the walls or floor to prevent them from tipping over during an earthquake. Avoid placing heavy objects on high shelves, as they can fall and cause injury. Develop a comprehensive emergency plan that includes evacuation routes and a designated meeting place for your family. Ensure all family members are aware of the plan and practice it regularly. Additionally, decide how you will communicate with each other during an emergency. Assemble an emergency kit with essential supplies such as water, non-perishable food, a flashlight, batteries, a first aid kit, and important documents. Keep this kit in a convenient location that is easily accessible during an emergency</p>
+            <br>
+            <p>Familiarize yourself with the locations of your home’s gas, water, and electricity shut-off valves. Learn how to turn them off in case of a leak or other emergency. This can prevent fires and other hazards following an earthquake. Identify safe spots in each room of your home where you can take cover during an earthquake. These spots should be away from windows and heavy objects that could fall. Practice the “Drop, Cover, and Hold On” technique with your family members. Keep up with local news and weather forecasts to stay informed about potential earthquake risks. Sign up for emergency alerts from local authorities to receive timely information and instructions.</p>
         </ul>
 
         <h3>During an Earthquake</h3>
         <ul>
-            <li>Drop, Cover, and Hold On under sturdy furniture.</li>
-            <li>Stay indoors until the shaking stops.</li>
-            <li>If outside, move to an open area away from buildings.</li>
+            <p>During an earthquake, it’s crucial to act quickly and follow safety protocols to protect yourself. If you are indoors, immediately drop to your hands and knees to prevent being knocked over. Take cover under a sturdy piece of furniture like a table or desk, and hold on until the shaking stops. If no shelter is available, get down near an interior wall away from windows and cover your head and neck with your arms. Avoid windows, fireplaces, and heavy furniture or appliances that could fall. If you are in the kitchen, turn off the stove and take cover. Stay indoors until the shaking stops and it is safe to exit, as running outside can expose you to falling debris and other hazards. If you are outdoors, quickly move away from buildings, power lines, trees, and anything else that could fall. Stay in the open until the shaking stops and drop to your hands and knees to protect yourself from being knocked over.</p>
+            <br >
+            <p>If you are driving, stop the car as quickly and safely as possible, avoiding stopping under bridges, overpasses, trees, light posts, power lines, or signs. Remain inside the car until the shaking stops. Once it is safe, proceed with caution, watching for road damage and obstacles. If you are in a mountainous area, watch out for falling rocks, landslides, and other debris that could be triggered by the earthquake. If you are near the ocean, be aware of the potential for tsunamis following an earthquake and move to higher ground as soon as it is safe to do so.</p>
         </ul>
 
         <h3>After an Earthquake</h3>
         <ul>
-            <li>Check yourself and others for injuries.</li>
-            <li>Inspect your home for damage.</li>
-            <li>Be prepared for aftershocks.</li>
+            <p>After an earthquake, it’s essential to stay calm and take specific actions to ensure your safety and the safety of others. First, check yourself and those around you for injuries. Provide first aid if necessary and call emergency services for seriously injured individuals. Be cautious of your surroundings, as there may be broken glass, debris, and other hazards. If you are indoors, carefully inspect your home for structural damage, such as cracks in the walls or foundation. If you detect any damage, especially to gas, water, or electrical lines, shut off the main valves and avoid using matches, lighters, or electrical switches until you are sure there are no gas leaks.</p>
+            <br>
+            <p>Next, stay informed by listening to emergency information and instructions from a battery-operated radio, social media, or text alerts. Avoid making phone calls unless it’s an emergency, as text messages may be more reliable. If you are in a coastal area, be aware of the potential for tsunamis and move to higher ground if necessary. Stay out of damaged buildings and avoid entering any structures that appear unsafe. If you are trapped, try to attract attention by sending a text, banging on a wall or pipe, or using a whistle. Protect your mouth, nose, and eyes from dust and take care of any wounds to prevent infection.</p>
+            <br>
+            <p>Finally, continue to follow instructions from local authorities and be prepared for aftershocks, which can occur minutes, days, or even months after the initial earthquake. These smaller tremors can cause additional damage, so it’s important to remain vigilant. If you can, help others in need and utilize community resources for assistance. Document any damage to your property for insurance purposes and report significant damage to the authorities.</p>
+            <br><br>
+            
         </ul>
+
     </section>
 
    
-    <footer>
-        <p>To be added.</p>
+    <footer >
+        Team kalki
     </footer>
 </body>
 </html>
