--- a/flood.html
+++ b/flood.html
@@ -22,29 +22,35 @@
         <h2>Flood Preparedness</h2>
         <h3>Before a Flood</h3>
         <ul>
-            <li>Know your flood risk.</li>
-            <li>Prepare an emergency kit.</li>
-            <li>Make a family communication plan.</li>
-            <li>Move valuables to higher ground.</li>
+            <p>Taking precautions before a flood can help protect your home and ensure the safety of your family. Start by securing or protecting any hazards in your home. Elevate the furnace, water heater, and electric panel if they are susceptible to flooding. Install “check valves” in sewer traps to prevent floodwater from backing up into the drains of your home. Additionally, anchor fuel tanks to prevent them from being swept away and causing damage or contamination. Ensure that your home has proper drainage by routinely cleaning and maintaining gutters, downspouts, and splash pads so that rainwater flows away from your home. Consider installing sump pumps with backup power to help remove water that enters your home.</p>
+            <br>
+            <p>Develop a comprehensive emergency plan that includes evacuation routes and a designated meeting place for your family. Make sure all family members are aware of the plan and practice it regularly. Establish a communication plan and choose an out-of-state relative or friend to be the “family contact” in case your family is separated during a flood. Keep important documents in a waterproof container and take a household inventory to document your belongings. Assemble an emergency kit with essential supplies such as water, non-perishable food, a flashlight, batteries, a first aid kit, and important documents. Include rubber boots, sturdy shoes, and waterproof gloves. It’s also a good idea to have insect repellent and long-sleeved clothing to protect against mosquitoes that may gather in pooled water after the flood. Keep this kit in a convenient location that is easily accessible during an emergency.</p>
+            <br>
+            <p>Stay informed about potential flood risks by monitoring weather forecasts and alerts from local authorities. Sign up for emergency alerts to receive timely information and instructions. Know your community’s emergency plans, warning signals, evacuation routes, and locations of emergency shelters. Inform local authorities about any special needs, such as older adults or individuals with disabilities, to ensure they receive the necessary assistance during a flood.</p>
         </ul>
 
         <h3>During a Flood</h3>
         <ul>
-            <li>Evacuate immediately if told to do so.</li>
-            <li>Avoid walking or driving through floodwaters.</li>
-            <li>Stay informed by listening to weather updates.</li>
+            <p>During a flood, it’s crucial to prioritize safety and follow specific guidelines to protect yourself and your loved ones. First and foremost, if local authorities issue an evacuation order, comply immediately. Evacuate to higher ground and avoid walking, swimming, or driving through floodwaters, as they can be deceptively dangerous. Even shallow water can sweep you off your feet, and just a foot of water can carry away a vehicle. If you are already on high ground, stay put and avoid unnecessary travel.</p>
+            <br>
+            <p>If you are indoors during a flood, move to the highest level of your home, but avoid attics without windows or exits, as you could become trapped. If water starts to rise inside your home, retreat to the roof and signal for help. Keep a battery-powered radio with you to stay informed about the situation. If you are in a vehicle, do not attempt to drive through flooded areas. Instead, turn around and find an alternative route. If your car becomes trapped in rapidly moving water, stay inside unless water begins to rise inside the vehicle.</p>
+            <br>
+            <p>For those on foot, avoid wading through floodwaters, as they can contain hazardous debris, contaminants, and downed power lines that may electrify the water. Seek refuge in a sturdy building on higher ground. Always have an exit route in mind and avoid getting trapped in areas without escape options. After the flood, continue to follow instructions from local authorities and be cautious of potential hazards such as weakened structures, contaminated water, and displaced wildlife.</p>
         </ul>
 
         <h3>After a Flood</h3>
         <ul>
-            <li>Avoid floodwaters; they may be contaminated.</li>
-            <li>Inspect your home for damage.</li>
-            <li>Take photos of damage for insurance claims.</li>
+            <p>After a flood, it’s essential to prioritize safety and take specific actions to ensure your well-being and that of your loved ones. First, only return to your home when local authorities have declared it safe to do so. Avoid driving through flooded areas and standing water, as even shallow water can be dangerous. Upon entering your home, be cautious of potential hazards such as downed power lines, gas leaks, and structural damage. Use a flashlight instead of open flames to avoid igniting any trapped gas.</p>
+            <br>
+            <p>Once inside, check for water contamination, as floodwaters often carry pollutants, bacteria, and sewage. Use bottled water for drinking and cooking until your water supply has been tested and deemed safe by local health authorities. If your home uses a private well, have it cleaned, disinfected, and tested before using the water again. Document any damage to your property by taking photos, which will be useful for insurance claims. Contact your insurance company as soon as possible to start the claims process.</p>
+            <br>
+            <p>During the cleanup process, remove and discard items that cannot be thoroughly cleaned and disinfected, such as mattresses, pillows, and carpeting. Dry out your home as quickly as possible to prevent mold growth, which can pose serious health risks. Use fans, dehumidifiers, and open windows to aid in the drying process. Wear protective clothing and masks when cleaning mold or other debris. Continue to follow instructions from local authorities and stay informed about any ongoing risks or necessary precautions.</p>
+            <br><br>
         </ul>
     </section>
 
-    <footer id="foot1">
-        <p>To be added.</p>
+    <footer >
+        Team kalki
     </footer>
 </body>
 </html>
