--- a/home.html
+++ b/home.html
@@ -39,8 +39,8 @@
             </div>
         </div>
     </section>
-    <footer id="foot">
-        <p>To be added.</p>
+    <footer >
+        Team kalki
     </footer>
 </body>
 </html>
