--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
         <h1>Be informed, Be safe!!!</h1>
         <nav>
             <ul>
-                <li><a href="">Information</a> </li>
+                <li><a href="./weather_details.html">Information</a> </li>
                 <li><a href="./home.html">Education</a> </li>
-                <li><a href="">Communication Channels</a></li>
+                <li><a href="./message-input.html">Communication Channels</a></li>
                 <li><a href="help.html">help ?</a> </li>
-                <li><a href=""><a href="">sign-in</a></a> </li>
-
+                <li><a href="./login-page.html">sign-in</a> </li>
             </ul>
         </nav>
     </header>
-
+    <a href="./message-display.html"><marquee class="marquee" direction="left"> Message from authorities</marquee></a> 
    <div class="container">
         <div class="homeImageContainer" id="first">
             <h1 class="text1">Reliable Information: Quick access to trustworthy disaster updates.</h1>
-            <a href="" class="but-one">Click here</a>
+            <a href="./weather_details.html" class="but-one">Click here</a>
         </div>
    
 
@@ -41,8 +40,9 @@
         </div>
     </div>
 
-   <footer id="mainfoot">
-    <p>To be added.</p>
-</footer>
+   <footer>
+        Team Kalki
+    </footer>
+<script src="index.js"></script>
 </body>
 </html>
