--- a/wildfire.html
+++ b/wildfire.html
@@ -26,28 +26,31 @@
         <h2>Wildfire Preparedness</h2>
         <h3>Before a Wildfire</h3>
         <ul>
-            <li>Clear flammable vegetation around your home.</li>
-            <li>Prepare an emergency kit and evacuation plan.</li>
-            <li>Install fire-resistant materials in your home.</li>
-            <li>Keep important documents in a fireproof safe.</li>
+            <p>Taking precautions before a wildfire can significantly reduce the risk to your home and ensure the safety of your family. Start by creating a defensible space around your home by clearing away flammable vegetation and debris within at least 30 feet of your house. Remove combustibles such as firewood, yard waste, barbecue grills, and fuel cans from your yard. Trim trees and shrubs to prevent fire from spreading to your home. Close all windows, vents, and doors to prevent drafts that could draw in embers. Additionally, shut off natural gas, propane, or fuel oil supplies to reduce the risk of explosions. Develop a comprehensive emergency plan that includes evacuation routes and a designated meeting place for your family. Make sure all family members are aware of the plan and practice it regularly. Know your community’s evacuation plans and find several ways to leave your area. Drive the evacuation routes and locate shelter options. Have a plan for pets and livestock, ensuring they can be evacuated safely. Gather emergency supplies, including food, water, and medicine, and organize them into a Go-Kit and a Stay-at-Home Kit. The Go-Kit should contain three days of supplies that you can easily carry with you, while the Stay-at-Home Kit should have two weeks of supplies.</p>
+            <br>
+            <p>Stay informed about potential wildfire risks by monitoring weather forecasts and alerts from local authorities. Sign up for emergency alerts to receive timely information and instructions. Have a backup battery or a way to charge your cell phone, and keep a battery-powered radio to stay updated on the situation. Plan to monitor weather conditions and fires near you using mapping tools and resources like the Emergency Alert System (EAS) and NOAA Weather Radio. Learn emergency skills such as first aid and CPR, and be prepared to live without power by planning for your electrical needs, including cell phones and medical equipment. By taking these precautions, you can help ensure the safety of your family and minimize the impact of a wildfire on your home.</p>
+        
         </ul>
 
         <h3>During a Wildfire</h3>
         <ul>
-            <li>Evacuate immediately if advised to do so.</li>
-            <li>Wear protective clothing to protect from heat.</li>
-            <li>Stay informed through local news and alerts.</li>
+            <p>During a wildfire, it’s crucial to prioritize safety and follow specific guidelines to protect yourself and your loved ones. First and foremost, if local authorities issue an evacuation order, comply immediately. Evacuate to higher ground and avoid walking, swimming, or driving through floodwaters, as they can be deceptively dangerous. Even shallow water can sweep you off your feet, and just a foot of water can carry away a vehicle. If you are already on high ground, stay put and avoid unnecessary travel.</p>
+            <br>
+            <p>If you are indoors during a flood, move to the highest level of your home, but avoid attics without windows or exits, as you could become trapped. If water starts to rise inside your home, retreat to the roof and signal for help. Keep a battery-powered radio with you to stay informed about the situation. If you are in a vehicle, do not attempt to drive through flooded areas. Instead, turn around and find an alternative route. If your car becomes trapped in rapidly moving water, stay inside unless water begins to rise inside the vehicle.</p>
+            <br>
+            <p>For those on foot, avoid wading through floodwaters, as they can contain hazardous debris, contaminants, and downed power lines that may electrify the water. Seek refuge in a sturdy building on higher ground. Always have an exit route in mind and avoid getting trapped in areas without escape options. After the flood, continue to follow instructions from local authorities and be cautious of potential hazards such as weakened structures, contaminated water, and displaced wildlife.</p>
         </ul>
 
         <h3>After a Wildfire</h3>
         <ul>
-            <li>Return home only when authorities say it is safe.</li>
-            <li>Check your property for hot spots and embers.</li>
-            <li>Document damage for insurance purposes.</li>
+            <p>After a wildfire, it’s crucial to prioritize safety and health. First, wait for official clearance before returning home and continue monitoring air quality reports to reduce smoke exposure. Wildfires leave behind ash that can irritate your eyes, nose, and skin, so wear protective clothing like long-sleeved shirts, long pants, gloves, and goggles, and use an N95 respirator to limit ash inhalation. When you do return, inspect your home for hot spots, smoldering areas, and fire damage, ensuring all appliances are off and the main circuit breaker is safe to turn on. Drive cautiously, as broken traffic lights, missing street signs, and debris on the road can pose hazards.</p>
+            <br>
+            <p>Once it’s safe to return, check your water supply system, such as wells or pump-houses, to ensure it’s safe to use. Avoid direct contact with ash and debris during cleanup efforts, and keep children away from these activities. Pay attention to any health symptoms, especially if you or your family members have pre-existing conditions like asthma or heart disease, and seek medical help if needed.</p>
+            <br><br>
         </ul>
     </section>
-    <footer>
-        <p>To be added.</p>
+    <footer >
+        Team kalki
     </footer>
 </body>
 </html>
